<resources>
    <string name="app_name">King of Karaoke</string>

    <string name="com_auth0_domain">dev-4vp2cnxkjqt7lqo0.us.auth0.com</string>
    <string name="com_auth0_client_id">6Plp5I5zEJyEtTkwuDkhjB3fCiBWi7h8</string>
    <string name="com_auth0_scheme">King of Karaoke</string>
    <string name="score_bin_id">663c712fad19ca34f866a3af</string>
    <string name="bin_id">663c56fbacd3cb34a8451235</string>
    <string name="master_key">$2a$10$wxDVWrBeELIP89vMLfezdekJnSeYUhkZlm6MzcdX6FgCaHcKp1j/a</string>
    <string name="access_key">$2a$10$05GBIJHUKcnJVg6ISUFLGe/ppGyj25HnVQCVC0WdGwyVlFxc8MJzS</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="high_score">High Score</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="time">00:00</string>
    <string name="logout">Logout</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>

    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>

    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Fetch data</string>
    <string name="dialog_description">Do you want to update data from server?</string>

    <string name="time_used">Time used:</string>
    <string name="score">Score</string>
    <string name="final_score">Final score</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="wrong_answers">Wrong Answers</string>
    <string name="hints_used">Hints Used</string>
    <string name="view_results">View Results</string>
    <string name="results">Results</string>


</resources>