<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbarAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backAppCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/exo_bold"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_12sdp"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/finalScoreAppCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/exo_medium"
        android:gravity="center_vertical"
        android:layout_marginVertical="@dimen/_18sdp"
        android:text="@string/final_score"
        android:textColor="@color/blue_dark"
        app:fontFamily="@font/exo_bold"
        android:textSize="@dimen/_18ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/usedTimingAppCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/exo_medium"
        android:gravity="center_vertical"
        android:layout_marginVertical="@dimen/_18sdp"
        android:text="@string/final_score"
        android:textColor="@color/blue_dark"
        app:fontFamily="@font/exo_bold"
        android:textSize="@dimen/_14ssp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/correctAnswerCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/exo_bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/exo_medium"
                android:gravity="center_vertical"
                android:text="@string/correct_answers"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/wrongAnswerCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/exo_bold"
                android:text="0"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/exo_medium"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/wrong_answers"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hintUsedCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/exo_bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/exo_medium"
                android:gravity="center_vertical"
                android:text="@string/hints_used"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewResultsAppCompatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_results"
        android:gravity="center"
        android:background="@color/blue_dark"
        android:textColor="@color/white"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_margin="@dimen/_18sdp"
        android:layout_gravity="center"/>
</LinearLayout>